--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "express-HelloWorld",
-    "description": "Hello World Node Express web application",
+    "name": "express-SupriyaCloudProject",
+    "description": "Supriya Cloud Project web application",
     "version": "0.0.1",
     "private": true,
     "dependencies": {
@@ -16,8 +16,5 @@
         "mocha": "5.0.0",
         "unit.js": "2.0.0",
         "supertest": "3.0.0"
-    },
-    "scripts": {
-        "test": "mocha --recursive tests --exit"
     }
 }
