--- a/appspec.yml
+++ b/appspec.yml
@@ -1,18 +1,20 @@
 version: 0.0
 os: linux
 files:
-- source: /app.js
+- source: /
   destination: /home/ec2-user/node-website
-- source: /package.json
-  destination: /home/ec2-user/node-website
-- source: /public/
-  destination: /home/ec2-user/node-website/public
-- source: /node_modules
-  destination: /home/ec2-user/node-website/node_modules
-- source: /services/
-  destination: /home/ec2-user/node-website/services
-- source: /scripts/
-  destination: /home/ec2-user/scripts
+#- source: /app.js
+#  destination: /home/ec2-user/node-website
+#- source: /package.json
+#  destination: /home/ec2-user/node-website
+#- source: /public/
+#  destination: /home/ec2-user/node-website/public
+#- source: /node_modules
+#  destination: /home/ec2-user/node-website/node_modules
+#- source: /services
+#  destination: /home/ec2-user/node-website/services
+#- source: /scripts
+#  destination: /home/ec2-user/scripts
 hooks:
   AfterInstall:
   - location: scripts/install_python3
