--- a/appspec.yml
+++ b/appspec.yml
@@ -17,9 +17,9 @@ files:
 #  destination: /home/ec2-user/scripts
 hooks:
   AfterInstall:
-  - location: scripts/install_python3
-    timeout: 300
-    runas: root
+#   - location: scripts/install_python3
+#     timeout: 300
+#     runas: root
   - location: scripts/codestar_remote_access
     timeout: 300
     runas: root
